Fixed ul spacing

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -72,7 +72,7 @@ ul {
   line-height:1.15em;
 	color:#fff;
   padding-left:0;
-	margin:0 12px 12px;
+	margin:0 0 12px 17px;
   li { margin-top:13px; }
 }
 footer { background-color:@teal; }
